# sdk-nrf

doc/nrf/releases/: release-notes-latest.rst
drivers/: CMakeLists.txt  Kconfig
drivers/lcz_fem/: CMakeLists.txt  Kconfig  LICENSE  fem_debug.c  fem_gpio.c  fem_power.c  fem_power_model.c  fem_power_model_ce.c
drivers/lcz_fem/power_table/: fem_power_table.h
drivers/lcz_fem/power_table/bl5340pa/: fcc_ic_external.c  fcc_ic_internal.c  rcm_external.c  rcm_internal.c  test_external.c  test_internal.c
dts/bindings/radio_fem/: lairdconnect,nrf21540-lcz-fem.yaml
include/bluetooth/services/: dfu_smp.h
lib/fem_al/: nrf21540.c
modules/: CMakeLists.txt
samples/bluetooth/direct_test_mode/: README.rst  sample.yaml
samples/bluetooth/direct_test_mode/boards/: bl5340_dvk_cpunet.conf  bl5340pa_dvk_cpunet.conf  bl5340pa_dvk_cpunet.overlay  bl5340pa_dvk_nrf5340_cpunet.conf
samples/bluetooth/direct_test_mode/remote_hci/boards/: bl5340pa_dvk_nrf5340_cpuapp.overlay
samples/bluetooth/direct_test_mode/rpc/: dtm_serialization.h
samples/bluetooth/throughput/: CMakeLists.txt  README.rst  fem.conf  prj.conf  prj_bl5340pa_dvk_cpuapp.conf  prj_nrf5340dk_nrf5340_cpuapp.conf
samples/bluetooth/throughput/child_image/: hci_rpmsg.bl5340pa.conf  hci_rpmsg.conf
samples/bluetooth/throughput/src/: cmds.c  main.c  main.h
subsys/bluetooth/: scan.c
subsys/bluetooth/services/: dfu_smp.c
subsys/mpsl/fem/: Kconfig
subsys/net/lib/download_client/src/: download_client.c
subsys/net/lib/fota_download/src/: fota_download.c
(+3 files in other folders)
